[package]
name = "keyheatmap"
version = "1.0.3"
edition = "2024"

authors = ["Jan Luca Oster <janluca.oster@proton.me>"]
license = "MIT"
readme = "README.md"

description = "A little tool that counts how often and how long you press which key on linux."

keywords = ["keyboard", "mouse", "keylogger", "cli", "analysis"]
categories = ["command-line-utilities"]

repository = "https://github.com/jlo62/KeyHeatMap"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
evdev = { version = "0.13.2", features = ["futures-core", "serde", "stream-trait", "tokio"] }
futures = "0.3.32"
futures-core = "0.3.32"
log = { version = "0.4.32", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-udev = "0.10.0"
xmltree = "0.12.0"
